--- a/7.4-alpine/Dockerfile
+++ b/7.4-alpine/Dockerfile
@@ -41,4 +41,5 @@ VOLUME "$SONARQUBE_HOME/data"
 
 WORKDIR $SONARQUBE_HOME
 COPY run.sh $SONARQUBE_HOME/bin/
+RUN chmod 777 ./bin/run.sh
 ENTRYPOINT ["./bin/run.sh"]
